--- a/pom.xml
+++ b/pom.xml
@@ -106,5 +106,17 @@
             <version>1.4.10-java7</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.vimalselvam</groupId>
+            <artifactId>cucumber-extentsreport</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+
     </dependencies>
 </project>
