--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
                 <configuration>
                     <forkCount>0</forkCount>
                     <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                        <suiteXmlFile>src\main\testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
@@ -30,7 +30,7 @@
                 <version>3.1</version>
                 <configuration>
                     <fork>true</fork>
-                    <executable>C:\Program Files\Java\jdk1.8.0_65\bin\javac.exe</executable>
+                    <executable>C:\Program Files\Java\jdk1.8.0_161\bin\javac.exe</executable>
                 </configuration>
             </plugin>
             <plugin>
